[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
authors = ["Luander Ribeiro <iam@luander.net>"]
version = "0.1.1"
edition = "2024"
description = "Safe & Efficient Regex in Rust – Compile-Time Validation & Single Compilation"
readme = "README.md"
repository = "https://github.com/luander/lure"
license = "Apache-2.0"
keywords = ["regex", "macro"]
exclude = [
    "examples/",
    ".github",
]
rust-version = "1.85"
publish = true

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[workspace.dependencies]
regex = "1.11"
