[workspace]
resolver = "3"
members = ["crates/*", "examples/*"]

[workspace.package]
authors = ["Luander Ribeiro <iam@luander.net>"]
version = "0.1.2"
edition = "2024"
description = "Shift left with Lure, a Rust crate that provides a macro for creating lazy Regex instances with compile-time validation, ensuring invalid patterns fail to compile."
readme = "README.md"
repository = "https://github.com/luander/lure"
license = "Apache-2.0"
license_file = "LICENSE"
keywords = ["regex", "macro"]
exclude = [
    "examples/",
    ".github",
]
rust-version = "1.85"
publish = true

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[workspace.dependencies]
regex = "1.11"
