[package]
name = "lure-macros"
edition = "2024"
version = "0.1.0"
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[lints]
workspace = true

[lib]
name = "lure_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
regex.workspace = true

