[package]
name = "lure-macros"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
readme.workspace = true
exclude.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
name = "lure_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
regex.workspace = true

