[package]
name = "lure"
edition = "2024"
version = "0.1.0"
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[lib]
name = "lure"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
regex.workspace = true

lure-macros = { path = "../lure-macros" }
