[package]
name = "lure"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
readme.workspace = true
exclude.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
name = "lure"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
regex.workspace = true

lure-macros = { path = "../lure-macros", version = "0.1" }
